2009-03-30  Sanel <karijes@users.sourceforge.net>

	* INSTALL: small clarifications
	* Jamrules: removed some vars used for playgrounds

2009-03-28  Sanel <karijes@users.sourceforge.net>

	* edelib/EdbusData.h: fix error on sun compiler
	* edelib/MessageBox.h:
	* src/MessageBox.cpp:
	* src/Run.cpp: fix warnings on sun compiler
	* INSTALL: compiling on SunStudio
	* edelib/FileTest.h: small changes in the doc
	* src/Directory.cpp: dir_create_with_parents() needs file_test()
	* edelib/*: documented macros

2009-03-27  Sanel <karijes@users.sourceforge.net>

	* src/IconChooser.cpp: some refactoring, use Fl_Double_Window
	* edelib/IconChooser.h: todo how it needs to be rewritten
	* edelib/FileTest.h:
	* src/FileTest.cpp:
	* test/file_test.cpp: added file_test() function with tests
	* src/FileTest.cpp: use lstat() for links
	* all: updated code to use file_test(); deprecated dir_*() and file_*()
	functions that do the same job; removing unneeded checks before
	file/directory open operations

2009-03-25  Sanel <karijes@users.sourceforge.net>

	* src/IconLoader.cpp: let get() check fallback icon too; some sanity
	checks
	* edelib/IconLoader.h: document get() behaviour
	* edelib/IconLoader.h: document how to get image object
	* src/IconLoader.cpp: remove previous image from Fl_Shared_Image cache
	whem icon theme was reloaded; some stats output
	* src/IconTheme.cpp: removed debug output when go in 'hicolor' theme
	* edelib/String.h: small documentation revision
	* edelib/String.h:
	* src/String.cpp:
	* test/string.cpp: added trim_left(), trim_right(), trim() function with
	the tests
	* src/IconTheme.cpp: updated to use trim() function
	* edelib.pc.in: added edelibdocdir variable; it will have full path to
	edelib documentation directory
	* src/icon/*: updated to gtk icons
	* src/MessageBox.cpp: use question icon where is needed

2009-03-24  Sanel <karijes@users.sourceforge.net>

	* edelib/IconTheme.h: default_theme_name() added