@@ -2,7 +2,7 @@
  * $Id$
  *
  * Color conversion functions
- * Copyright (c) 2005-2007 edelib authors
+ * Copyright (c) 2005-2009 edelib authors
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -60,16 +60,39 @@ EDELIB_API void color_fltk_to_rgb(unsigned int color, unsigned char& r, unsigned
 EDELIB_API unsigned int color_html_to_fltk(const char* col);
 
 /**
- * Convert FLTK color to html-like representation. Given buffer is assumed to
+ * Convert FLTK color to html representation. Given buffer is assumed to
  * be a prior allocated and <b>must</b> be at least 8 character wide. Final result
  * will be in form <em>\#rrggbb</em> and string will be null terminated.
  *
  * \note For this function the same applies as for color_fltk_to_rgb()
  *
  * \param color is FLTK color
- * \param buff is buffer where to place html color
+ * \param buf is buffer where to place html color
  */
-EDELIB_API void color_fltk_to_html(unsigned int color, char* buff);
+EDELIB_API void color_fltk_to_html(unsigned int color, char* buf);
+
+/**
+ * Convert RGB color to html representation. Given buffer is assumed to
+ * be a prior allocated and <b>must</b> be at least 8 character wide. Final result
+ * will be in form <em>\#rrggbb</em> and string will be null terminated.
+ *
+ * \param r is red component
+ * \param g is green component
+ * \param b is blue component
+ * \param buf is buffer where to place html color
+ */
+EDELIB_API void color_rgb_to_html(unsigned char r, unsigned char g, unsigned char b, char* buf);
+
+/**
+ * Decompose html representation to rgb compontents. Because this function uses color_fltk_to_rgb(),
+ * the same properties applies here.
+ *
+ * \param buf is buffer where to place html color (8 character wide)
+ * \param r is extracted red component
+ * \param g is extracted green component
+ * \param b is extracted blue component
+ */
+EDELIB_API void color_html_to_rgb(const char* buf, unsigned char& r, unsigned char& g, unsigned char& b);
 
 EDELIB_NS_END
 #endif
